--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.50.2",
     "axios": "^1.10.0",
     "firebase": "^11.9.1",
     "framer-motion": "^11.0.0",
