--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-hook-form": "^7.50.0",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.22.0",
+    "supabase": "^2.26.9",
     "yarn": "^1.22.22"
   },
   "devDependencies": {
