--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emoji-mart/data": "^1.2.1",
+    "@emoji-mart/react": "^1.1.1",
     "@supabase/supabase-js": "^2.50.2",
     "axios": "^1.10.0",
+    "emoji-mart": "^5.6.0",
     "firebase": "^11.9.1",
     "framer-motion": "^11.0.0",
     "lucide-react": "^0.344.0",
